@@ -259,6 +259,8 @@ secure_log_date_format = %b %e
 # -----------------------------------------------------------------------------
 <nvidia>
 	max = 1
+	<alerts>
+	</alerts>
 	rigid = 1, 2, 2
 	limit = 50, 100, 100
 </nvidia>
